@@ -1,0 +1,17 @@
+from typing import (
+    List,
+    Tuple,
+)
+from requests.adapters import PreparedRequest
+from responses import BaseResponse
+
+class FirstMatchRegistry:
+    _responses = List[BaseResponse]
+    def __init__(self) -> None: ...
+    @property
+    def registered(self) -> List[BaseResponse]: ...
+    def reset(self) -> None: ...
+    def find(self, request: PreparedRequest) -> Tuple[BaseResponse, List[str]]: ...
+    def add(self, response: BaseResponse) -> None: ...
+    def remove(self, response: BaseResponse) -> None: ...
+    def replace(self, response: BaseResponse) -> None: ...
