@@ -9,6 +9,9 @@
 * Deprecate ``match_querystring`` argument in ``Response`` and ``CallbackResponse``.
   Use `responses.matchers.query_param_matcher` or `responses.matchers.query_string_matcher`
 * Added support for non-UTF-8 bytes in `responses.matchers.multipart_matcher`
+* Added `responses.registries`. Now user can create custom registries to
+  manipulate the order of responses in the match algorithm
+  `responses.activate(registry=CustomRegistry)`
 
 0.16.0
 ------
